Implement the skeletons for each router
