# src/app/models/openapi/applications.ts
@@ -4,43 +4,34 @@
  */
 
 export interface paths {
-    "/projects/{projectID}/Collaborators": {
+    "/App": {
         parameters: {
             query?: never;
             header?: never;
             path?: never;
             cookie?: never;
         };
-        /** Viewing Current collaborators on a project */
+        /** Make an application registration */
         get: {
             parameters: {
                 query?: never;
                 header?: never;
-                path: {
-                    projectID: string;
-                };
+                path?: never;
                 cookie?: never;
             };
             requestBody?: never;
             responses: {
-                /** @description List of project collaborators */
-                200: {
+                /** @description Application registration successful */
+                201: {
                     headers: {
                         [name: string]: unknown;
                     };
                     content: {
-                        "application/json": components["schemas"]["collaboratorsResponse"][];
+                        "application/json": components["schemas"]["ApplicationResponse"];
                     };
                 };
-                /** @description JWT authentication required */
+                /** @description Forbidden, JWT authentication required */
                 403: {
-                    headers: {
-                        [name: string]: unknown;
-                    };
-                    content?: never;
-                };
-                /** @description Project ID not found */
-                404: {
                     headers: {
                         [name: string]: unknown;
                     };
@@ -49,41 +40,44 @@ export interface paths {
             };
         };
         put?: never;
-        /** Adding a Collaborator to a project */
-        post: {
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
+    "/App/{appID}/newSecret": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Roll the secret for an application */
+        get: {
             parameters: {
                 query?: never;
                 header?: never;
                 path: {
-                    projectID: string;
+                    /** @description The ID of the application to roll the secret for */
+                    appID: components["schemas"]["UUID"];
                 };
                 cookie?: never;
             };
-            requestBody: {
-                content: {
-                    "application/json": {
-                        /** Format: uuid */
-                        collaborator: string;
-                    };
-                };
-            };
+            requestBody?: never;
             responses: {
-                /** @description Collaborator added to the project */
-                201: {
+                /** @description New secret generated successfully */
+                200: {
                     headers: {
                         [name: string]: unknown;
                     };
-                    content?: never;
+                    content: {
+                        "application/json": components["schemas"]["ApplicationResponse"];
+                    };
                 };
-                /** @description JWT authentication required */
+                /** @description Forbidden, JWT authentication required */
                 403: {
-                    headers: {
-                        [name: string]: unknown;
-                    };
-                    content?: never;
-                };
-                /** @description Project ID not found */
-                404: {
                     headers: {
                         [name: string]: unknown;
                     };
@@ -91,13 +85,15 @@ export interface paths {
                 };
             };
         };
+        put?: never;
+        post?: never;
         delete?: never;
         options?: never;
         head?: never;
         patch?: never;
         trace?: never;
     };
-    "/projects/{projectID}/Collaborators/{collaboratorTenantId}": {
+    "/App/{appID}": {
         parameters: {
             query?: never;
             header?: never;
@@ -107,42 +103,28 @@ export interface paths {
         get?: never;
         put?: never;
         post?: never;
-        /** Removing a collaborator from a project */
+        /** Delete a registration */
         delete: {
             parameters: {
                 query?: never;
                 header?: never;
                 path: {
-                    projectID: string;
-                    collaboratorTenantId: string;
+                    /** @description The ID of the application to delete */
+                    appID: components["schemas"]["UUID"];
                 };
                 cookie?: never;
             };
             requestBody?: never;
             responses: {
-                /** @description Collaborator removed from the project */
-                200: {
+                /** @description Application deleted successfully */
+                204: {
                     headers: {
                         [name: string]: unknown;
                     };
                     content?: never;
                 };
-                /** @description Cannot remove collaborator, still present on projects */
-                400: {
-                    headers: {
-                        [name: string]: unknown;
-                    };
-                    content?: never;
-                };
-                /** @description JWT authentication required */
+                /** @description Forbidden, JWT authentication required */
                 403: {
-                    headers: {
-                        [name: string]: unknown;
-                    };
-                    content?: never;
-                };
-                /** @description Collaborator or Project ID not found */
-                404: {
                     headers: {
                         [name: string]: unknown;
                     };
@@ -159,18 +141,13 @@ export interface paths {
 export type webhooks = Record<string, never>;
 export interface components {
     schemas: {
-        collaboratorsResponse: {
-            friendlyName?: string;
+        ApplicationResponse: {
             /** Format: uuid */
-            tenantID?: string;
-            /** @enum {string} */
-            status?: "PENDING" | "ACTIVE";
-            projects?: {
-                projectName: string;
-                /** Format: uuid */
-                projectID: string;
-            }[];
+            appID?: string;
+            secret?: string;
         };
+        /** Format: uuid */
+        UUID: string;
     };
     responses: never;
     parameters: never;
